# trading

./: .gitignore
bento_queries/: Cargo.toml  lib.rs
bento_queries/bento/: mod.rs
bento_queries/listtobin/: .mod.rs.swp  mod.rs  vectype.rs
bento_queries/stochastic_estimation/: mod.rs
bento_queries/surreal_queries/: .mod.rs.swp  mod.rs
db_compustat/: Cargo.toml
db_compustat/src/: lib.rs  main.rs
db_compustat/src/finance_data_structs/: compustat.rs  mod.rs
euler-anunoby/: Cargo.toml  Dioxus.toml
euler-anunoby/src/: main.rs
euler-anunoby/src/charts/: mod.rs
euler-anunoby/src/css_files/: home_style.css
euler-anunoby/src/ops/: mod.rs
euler-anunoby/src/surr_queries/: mod.rs
mojo_modules/neural_net/: mojoproject.toml
mojo_modules/read_bin/: bin_to_df.mojo  main.mojo  pixi.toml
mojo_modules/read_bin/structs/: floatdecoder.mojo  ieee754.mojo  intdecoder.mojo  twos_comp.mojo  uintdecoder.mojo  unsigned_int.mojo
mojo_modules/read_csv/: bin_to_df.mojo  main.mojo
mojo_modules/read_csv/structs/: twos_comp.mojo
mojo_modules/simulations/: .csm_setup_LIG2kMwXf  main.mojo  mojoproject.toml  monte_carlo.mojo  pixi.toml
mojo_modules/simulations/read_bin/: __init__.mojo  bin_to_df.mojo
mojo_modules/simulations/read_bin/structs/: __init__.mojo  floatdecoder.mojo  ieee754.mojo  intdecoder.mojo
og-euler-anunoby/: Cargo.toml  Dioxus.toml
og-euler-anunoby/src/: lib.rs  main.rs
og-euler-anunoby/src/charts/: clustering.rs  mod.rs  single_asset_lc.rs
og-euler-anunoby/src/css_files/: home_style.css
og-euler-anunoby/src/data_structures/: mod.rs
og-euler-anunoby/src/ops/: mod.rs
og-euler-anunoby/src/surr_queries/: mod.rs
og-euler-anunoby/src/tables/: mod.rs
