[package]
name = "db_compustat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
surrealdb = { version = "2.0.1", features = ["kv-mem"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
