[package]
name = "euler-anunoby"
version = "0.1.0"
authors = ["yakmanyakmanyedatsme <wfrancis@fordham.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }

dioxus = { version = "0.5.6", features = ["fullstack", "router"] }
fnv = "1.0.7"
surrealdb = {version = "2.0.4", features = ["protocol-ws","protocol-http","kv-mem"]}

# Debug
dioxus-logger = "0.5.1"
plotters = "0.3.7"
nalgebra = "0.33.0"
time = "0.3.36"
tokio = "1.40.0"
chrono = "0.4.38"
[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
