[package]
name = "og-euler-anunoby"
version = "0.1.0"
authors = ["jamesharden122 <loudonvillewf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "web", "router"] }
dioxus-logger = "0.6.2"
dioxus-cli-config = { version = "0.6.3", optional = true }

serde = { version = "1.0.210", features = ["derive"] }
plotters = "0.3.7"
nalgebra = "0.33.2"
chrono = "0.4.41"
surrealdb = { version = "2.3.2", optional = true }
axum = { version = "0.7.0", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
strum = "0.25"
strum_macros = "0.25"
dioxus-router = "0.6.3"

[features]
default = ["web"]

web = ["dioxus/web"]

server = [
    "dioxus/server",
    "dep:surrealdb",
    "dep:axum",
    "dep:tokio",
    "dep:dioxus-cli-config"
]

desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
